begin api/sales

--- a/manager_app/templates/admin/base_site.html
+++ b/manager_app/templates/admin/base_site.html
@@ -13,3 +13,5 @@
 </div>
 {{ block.super }}  <!-- Esto incluye el contenido original -->
 {% endblock %}
+
+{% block javascript %}{% endblock javascript %}
