paginator frontend sales

--- a/manager_app/templates/invoices/index.html
+++ b/manager_app/templates/invoices/index.html
@@ -52,17 +52,53 @@
           
         </tr>
     </table>
+
+    <nav aria-label="...">
+        <ul class="pagination pagination-md" id="id-paginator">
+          <!-- <li class="page-item active" aria-current="page">
+            <span class="page-link">1</span>
+          </li> -->
+        </ul>
+    </nav>
 </div>
 {{ block.super }}  Esto incluye el contenido original
 
 <script>
     const tableEl = document.querySelector('#table-invoices')
+    const paginatorEl = document.querySelector('#id-paginator')
+    
     const getListInvoices = async()=>{
-        const resp = await fetch('http://localhost:8000/api/v1/sales/list-invoices/')
+        let url = getLocationBrowser()
+        const resp = await fetch(url)
         const respData = await resp.json()
         respData.data.forEach(el =>{
             setTableInvoices(el)
         })
+
+        paginationInvoices(respData.pages)
+        getLocationBrowser()
+    }
+
+    const getLocationBrowser = ()=>{
+        let currentUrl = window.location.href
+        let url = currentUrl.replace("sales","api/v1/sales/list-invoices")
+        
+        return url
+    }
+    
+    const paginationInvoices = (num)=>{
+        for(let i=0; i < num; i++){
+            const li = document.createElement('li')
+
+            if(i == 0){
+                li.classList.add('page-item','active')
+            }
+            
+            li.innerHTML = `
+                <li class="page-item"><a class="page-link" href="?page=${i + 1}">${i + 1}</a></li>
+            `
+            paginatorEl.appendChild(li)
+        }
     }
 
     const setTableInvoices = (bill)=>{
@@ -74,7 +110,7 @@
             <td>$ ${bill.value}</td>
             <td>Efectivo</td>
             <td>${bill.date} | 4:37 PM</td>
-            <td>${bill.is_paid}</td>
+            <td class="badge ${bill.is_paid ? 'text-bg-secondary' : 'text-bg-primary'}">${bill.is_paid ? 'Cancelado' : 'Pendiente'}</td>
         `
         tableEl.appendChild(tr)
         
