--- a/manager_app/templates/includes/card_dash.html
+++ b/manager_app/templates/includes/card_dash.html
@@ -80,7 +80,7 @@
     const response = await fetch(`http://localhost:8000/api/v1/sales/list-invoices/balance/`)
     const resData = await response.json()
 
-    for(let strName of ['balance','ventas','compras']){
+    for(let strName of ['balance','ventas','costos']){
       const div = document.createElement('div')
       div.classList.add("col-sm-4")
 
@@ -102,7 +102,7 @@
                 <path
                   d="M1408 1216q0 26-19 45t-45 19h-896q-26 0-45-19t-19-45 19-45l448-448q19-19 45-19t45 19l448 448q19 19 19 45z">
                 </path>
-              </svg> 20%
+              </svg> ${resData['pct_balance']}%
             </p>
           </div>
           <div class="data" >
