--- a/manager_app/templates/invoices/bill.html
+++ b/manager_app/templates/invoices/bill.html
@@ -93,9 +93,19 @@
     </center><!--End InvoiceTop-->
 
     <div id="mid">
-        <div class="info">
-            <h2>Contact Info</h2>
-            <p id="contacInfo"></p>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="info">
+                    <h2>Contact Info</h2>
+                    <p id="contacInfo"></p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="info">
+                    <h2>Infor Invoice</h2>
+                    <p id="invInfo"></p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -165,7 +175,10 @@
         const response = await fetch(url)
         const respData = await response.json()
         
+        let {number_bill, date} = respData
+        invoiceInfo(number_bill, date)
         customerInfo(respData.customer);
+
         respData.products.forEach(el =>{
             table.appendChild(productSalesInfo(el))
         })
@@ -174,6 +187,16 @@
         table.appendChild(totalesInfo('subtotal :', subtotal))
         table.appendChild(totalesInfo('IVA %', tax))
         table.appendChild(totalesInfo('Total :', total))
+    }
+
+    const invoiceInfo = (number_bill, date)=>{
+        const pEl = document.querySelector('#invInfo')
+        pEl.innerHTML = `
+            Numero de factura : ${number_bill}</br>
+            Fecha : ${date}</br>
+            Estado : Cancelado</br>
+            Vendedor : Rober Caliz</br>
+        `
     }
 
     const customerInfo = (client)=>{
