--- a/manager_app/templates/invoices/index.html
+++ b/manager_app/templates/invoices/index.html
@@ -5,6 +5,18 @@
 
 {% block content %}
 <div>
+    <div class="form-group">
+
+        <a href="{% url "export_csv" %}" class="btn btn-outline-info form-control">
+            <i class="fa fa-download" aria-hidden="true"></i>
+            exportar ventas
+        </a>
+        <a href="{% url "invoice_new" %}" class="btn btn-outline-info form-control">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            Nueva
+        </a>
+    </div>
+
     {% include "includes/card_dash.html" %}
     
     <table class="table table-striped" id="table-invoices">
