--- a/manager_app/templates/invoices/index.html
+++ b/manager_app/templates/invoices/index.html
@@ -5,8 +5,10 @@
 
 {% block content %}
 <div>
-    <div class="form-group">
 
+    <div class="form-group">
+        {% include "includes/filter_date.html" %}
+        
         <a href="{% url "export_csv" %}" class="btn btn-outline-info form-control">
             <i class="fa fa-download" aria-hidden="true"></i>
             exportar ventas
