--- a/manager_app/templates/invoices/cart/form.html
+++ b/manager_app/templates/invoices/cart/form.html
@@ -6,7 +6,7 @@
         <input type="text" value="{{item.title}}" >
         <input type="text" value="{{item.id}}" name="product" style="display:none;">
         <label>Cantidad</label>
-        <input type="text" value="1" name="quantity">
+        <input type="number" value="1" name="quantity">
         <label>Precio</label>
         <input type="text" value="{{item.price}}" name="price">
         <input type="submit" value="guardar">
